[B]2.0.0[/B]
- added: Option to Use IMDb Search Engine

[B]1.9.4[/B]
- updated: language files from Transifex

[B]1.9.3[/B]
- fixed: won't scrape from TMDb when movie is part of a collection

[B]1.9.2[/B]
- fixed: nfo scraping

[B]1.9.1[/B]
- fixed: won't scrape from TMDb when there is not IMDb id registered

[B]1.9.0[/B]
- updated: Settings Clean-up / added TOP250 and outline from IMDb

[B]1.8.1[/B]
- fixed: studio and country won't scrape

[B]1.8.0[/B]
- changed: switch to TMDb search engine

[B]1.7.0[/B]
- fixed: won't find anything after IMDb layout changes

[B]1.6.2[/B]
- fixed: some movies won't find after previous update

[B]1.6.1[/B]
- changed: an attempt to remove Video Games from Search Results

[B]1.6.0[/B]
- added: option to select tagline source

[B]1.5.0[/B]
- added: option to select preferred trailer language

[B]1.4.0[/B]
- added: option to get plot from port.hu

[B]1.3.0[/B]
- added: option to select genre language when screping from TMDb

[B]1.2.0[/B]
- added: option to scrape rating from MetaCritic (via IMDb)

[B]1.1.2[/B]
- added: Australia to the country list of certifications
- changed: sorted countries alphabetically
- added: option to scrape preferred country certification from TMDb

[B]1.1.1[/B]
- fixed: some potential html encode issues

[B]1.1.0[/B]
- added: support for trakt.tv

[B]1.0.5[/B]
- added: some improvement to match movies by their International Titles

[B]1.0.4[/B]
- updated: to use IMDb scraper library v2.2.2

[B]1.0.3[/B]
- updated: to use IMDb scraper library v2.2.1

[B]1.0.2[/B]
- added: support for OFDb.de plot

[B]1.0.1[/B]
- fixed: put UK back on the map
- added: poster from IMDb is now optional

[B]1.0.0[/B]
- Initial version