@@ -8,9 +8,9 @@
     <string id="30006">Enable trailers from HD-Trailers.net</string>
     <string id="30008">     Preferred Title Language from</string>
     <string id="30009">Enable trailers from themoviedb.org</string>
-    <string id="30011">Artwork</string>
+    <string id="30011">Poster</string>
     <string id="30012">Trailers</string>
-    <string id="30013">Get Set (Collection) Titles from themoviedb.org</string>
+    <string id="30013">Get Set (Collection) Name from themoviedb.org</string>
     <string id="30014">Get Plot from</string>
     <string id="30015">Get Cast / Directors / Writers From</string>
     <string id="30016">Plot Sources</string>
@@ -39,21 +39,29 @@
     <string id="30042">Get Tagline From</string>
     <string id="30043">     Preferred Tagline Language</string>
     <string id="30044">Get IMDb TOP250 Ranking</string>
-    <string id="30045">Get Outline From IMDb</string>
+    <string id="30045">Get Outline From</string>
+    <string id="30046">     Preferred Set (Collection) Name Language</string>
+    <string id="30047">Poster Sources</string>
 
     <string id="30100">Rating</string>
     <string id="30021">Get Ratings from</string>
     <string id="30110">     Rating Generated Using</string>
     <string id="30115">     Use the Score Aggregated from</string>
-    <string id="30120">     Use Critics' Consensus as Movie Outline</string>
 
     <string id="30200">Credits</string>
     <string id="30201">Get Studio from</string>
     <string id="30202">Get Country from</string>
 
     <string id="30300">Search</string>
-    <string id="30301">IMDb</string>
-    <string id="30302">themoviedb.org</string>
+    <string id="30301">themoviedb.org</string>
+    <string id="30302">IMDb</string>
     <string id="30303">Search Engine to Use</string>
+    <string id="30304">     Secondary Search Language (In Addition to en-us)</string>
+
+    <string id="30400">Plot</string>
+    <string id="30401">Plot / Tagline / Outline</string>
+
+    <string id="30500">Fanart</string>
+    <string id="30501">Fanart Sources</string>
 
 </strings>
